Add MULTIPART properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ logging.pattern.level=debug
 server.servlet.context-path=/gmartws
 
 #Data source properties
+spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:file:~/Databases/gmartDB
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -22,3 +23,16 @@ spring.h2.console.enabled=true
 spring.jpa.properties.javax.persistence.query.timeout=1200000
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
+
+
+
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
