--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,29 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.1.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.gmart</groupId>
-	<artifactId>gmartapi</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>GmartWS</name>
-	<description>Demo project for Spring Boot</description>
+	 <parent>
+        <groupId>com.gmart.api</groupId>
+        <artifactId>gmart-api</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+    
+	<groupId>com.gmart.core</groupId>
+	<artifactId>gmart-core</artifactId>
+	<name>gmart-core</name>
+	<description>GMART core project</description>
 
 	<properties>
-		<java.version>1.8</java.version>
 		<jjwt.version>0.9.0</jjwt.version>
 	</properties>
 
 	<dependencies>
+		
+		<dependency>
+			<groupId>com.gmart.api</groupId>
+			<artifactId>gmart-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
