Update POM to use JITPACK

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	 <parent>
-        <groupId>com.gmart.api</groupId>
+        <groupId>com.github.TOUNOUSSI</groupId>
         <artifactId>gmart-api</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -19,9 +19,14 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.github.TOUNOUSSI</groupId>
+			<artifactId>gmart-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+	    </dependency>
 		
 		<dependency>
-			<groupId>com.gmart.api</groupId>
+			<groupId>com.github.TOUNOUSSI</groupId>
 			<artifactId>gmart-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
@@ -101,4 +106,13 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<distributionManagement>
+		<repositories>
+			<repository>
+				<id>jitpack.io</id>
+				<url>https://jitpack.io</url>
+			</repository>
+		</repositories>
+	</distributionManagement>
 </project>
