--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,12 @@
 server.port= 8087
-
-#JWT properties
-app.jwtSecret = JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
-
+spring.application.name=gmart-core
 
 #LOGGER properties
-logging.pattern.level=debug
-
-server.servlet.context-path=/gmartws
+logging.pattern.level=INFO
 
 #Data source properties
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:file:~/Databases/gmartDB
+spring.datasource.url=jdbc:h2:file:~/GMART/Databases/gmartDB
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -24,9 +18,6 @@ spring.jpa.properties.javax.persistence.query.timeout=1200000
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 
-
-
-
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
@@ -36,3 +27,11 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+
+#JWT properties //app.jwtSecret
+gmart.jwt.secret = JWTSuperSecretKey
+gmart.content.location = C://Users/10063079/GMART
+gmart.database.exchange.path = ${gmart.content.location}/Exchange
+gmart.database.exchange.tmp.path = ${gmart.database.exchange.path}/tmp
+gmart.database.folder.path = ${gmart.content.location}/Databases
+gmart.logs.folder.path = ${gmart.content.location}/Logs
